--- a/css/main.scss
+++ b/css/main.scss
@@ -10,13 +10,13 @@ $content-max-width: 800px;
 $content-color: #222;
 $content-background-color: #fff;
 
-$brand-colour: #3583d6;
+$brand-colour: #2b2e31;
 $brand-colour-light: mix($brand-colour, $content-background-color, 10%);
 
 $nav-header-background-color: $brand-colour;
 $nav-header-height: 60px;
 $nav-background-color: #f5f5f5;
-$nav-width: 300px;
+$nav-width: 200px;
 
 $space: 20px;
 
