improve allure page layout

--- a/_layouts/allure.html
+++ b/_layouts/allure.html
@@ -12,8 +12,8 @@
 	<link rel="stylesheet"
 		href="//fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic|Open+Sans:400,400italic,600,600italic,700,700italic|Inconsolata:400,700">
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
-	<link rel="apple-touch-icon" href="{{ site.baseurl }}/allure-apple-touch-icon.png">
-	<link rel="icon" type="image/png" href="{{ site.baseurl }}/allure-touch-icon.png" sizes="192x192">
+	<link rel="apple-touch-icon" href="{{ site.baseurl }}/images/allure.png">
+	<link rel="icon" type="image/png" href="{{ site.baseurl }}/images/allure.png" sizes="192x192">
 	<link rel="icon" type="image/png" href="{{ site.baseurl }}/images/allure.png">
 
 	{% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
@@ -29,8 +29,8 @@
 <body>
 	<header>
 		<h1>
-			<a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/allure-emblem.svg" width="40" height="40"
-					alt="{{ site.title }} logo"></a>Allure
+			<a href="{{ site.baseurl }}/allure"><img src="{{ site.baseurl }}/images/allure.png" width="40" height="40"
+					alt="logo"></a>Allure
 			<button type="button" class="open-nav" id="open-nav"></button>
 		</h1>
 		<nav {% if site.show_full_navigation %}class="full-navigation" {% endif %}>
