--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,9 @@
 							<a href="{{ site.baseurl }}{{ items.first.url }}">{{ group.name }}</a>
 							<ul>
 								{% for item in items %}
+									{% if item.category != 'DOC' %}
 									<li class="nav-item {% if item.url == page.url %}current{% endif %}"><a href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a></li>
+									{% endif %}
 								{% endfor %}
 							</ul>
 						</li>
