--- a/_layouts/allure.html
+++ b/_layouts/allure.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-	<header>
+	<header style="position: fixed;">
 		<h1>
 			<a href="{{ site.baseurl }}/allure"><img src="{{ site.baseurl }}/images/allure.png" width="40" height="40"
 					alt="logo"></a>Allure
@@ -46,6 +46,8 @@
 					<a href="#_about">1.关于</a>
 					<ul>
 						<li class="nav-item"><a href="#_copyright">1.1.版权</a></li>
+						<li class="nav-item"><a href="#">1.2.获得帮助</a></li>
+						<li class="nav-item"><a href="#">1.3.如何进行</a></li>
 					</ul>
 				</li>
 			</ul>
