--- a/_layouts/allure.html
+++ b/_layouts/allure.html
@@ -46,8 +46,29 @@
 					<a href="#_about">1.关于</a>
 					<ul>
 						<li class="nav-item"><a href="#_copyright">1.1.版权</a></li>
-						<li class="nav-item"><a href="#">1.2.获得帮助</a></li>
-						<li class="nav-item"><a href="#">1.3.如何进行</a></li>
+						<li class="nav-item"><a href="#_get_help">1.2.获得帮助</a></li>
+						<li class="nav-item"><a href="#_how_to_proceed">1.3.如何开始</a></li>
+					</ul>
+				</li>
+				<li class="nav-item top-level">
+					<a href="#_get_started">2.开始</a>
+					<ul>
+						<li class="nav-item"><a href="#_installing_a_commandline"></a></li>
+						<li class="nav-item"><a href="#_test_execution"></a></li>
+						<li class="nav-item"><a href="#_report_generation"></a></li>
+					</ul>
+				</li>
+				<li class="nav-item top-level">
+					<a href="#_report_structure">3.</a>
+					<ul>
+						<li class="nav-item"><a href="#_overview_page"></a></li>
+						<li class="nav-item"><a href="#_categories"></a></li>
+						<li class="nav-item"><a href="#_suites"></a></li>
+						<li class="nav-item"><a href="#_graphs"></a></li>
+						<li class="nav-item"><a href="#_timeline"></a></li>
+						<li class="nav-item"><a href="#_behaviors"></a></li>
+						<li class="nav-item"><a href="#_packages"></a></li>
+						<li class="nav-item"><a href="#_test_case_page"></a></li>
 					</ul>
 				</li>
 			</ul>
