--- a/_layouts/allure.html
+++ b/_layouts/allure.html
@@ -43,32 +43,124 @@
 
 			<ul>
 				<li class="nav-item top-level">
-					<a href="#_about">1.关于</a>
+					<a href="#_about">1. 关于</a>
 					<ul>
-						<li class="nav-item"><a href="#_copyright">1.1.版权</a></li>
-						<li class="nav-item"><a href="#_get_help">1.2.获得帮助</a></li>
-						<li class="nav-item"><a href="#_how_to_proceed">1.3.如何开始</a></li>
+						<li class="nav-item"><a href="#_copyright">1.1. 版权</a></li>
+						<li class="nav-item"><a href="#_get_help">1.2. 获得帮助</a></li>
+						<li class="nav-item"><a href="#_how_to_proceed">1.3. 如何开始</a></li>
 					</ul>
 				</li>
 				<li class="nav-item top-level">
-					<a href="#_get_started">2.开始</a>
+					<a href="#_get_started">2. 开始</a>
 					<ul>
-						<li class="nav-item"><a href="#_installing_a_commandline"></a></li>
-						<li class="nav-item"><a href="#_test_execution"></a></li>
-						<li class="nav-item"><a href="#_report_generation"></a></li>
+						<li class="nav-item"><a href="#_installing_a_commandline">2.1. 安装</a></li>
+						<li class="nav-item"><a href="#_test_execution">2.2. 执行测试</a></li>
+						<li class="nav-item"><a href="#_report_generation">2.3. 生成报告</a></li>
 					</ul>
 				</li>
 				<li class="nav-item top-level">
-					<a href="#_report_structure">3.</a>
+					<a href="#_report_structure">3. </a>
 					<ul>
-						<li class="nav-item"><a href="#_overview_page"></a></li>
-						<li class="nav-item"><a href="#_categories"></a></li>
-						<li class="nav-item"><a href="#_suites"></a></li>
-						<li class="nav-item"><a href="#_graphs"></a></li>
-						<li class="nav-item"><a href="#_timeline"></a></li>
-						<li class="nav-item"><a href="#_behaviors"></a></li>
-						<li class="nav-item"><a href="#_packages"></a></li>
-						<li class="nav-item"><a href="#_test_case_page"></a></li>
+						<li class="nav-item"><a href="#_overview_page">3.1. </a></li>
+						<li class="nav-item"><a href="#_categories">3.2. </a></li>
+						<li class="nav-item"><a href="#_suites">3.3.</a></li>
+						<li class="nav-item"><a href="#_graphs">3.4.</a></li>
+						<li class="nav-item"><a href="#_timeline">3.5.</a></li>
+						<li class="nav-item"><a href="#_behaviors">3.6.</a></li>
+						<li class="nav-item"><a href="#_packages">3.7.</a></li>
+						<li class="nav-item"><a href="#_test_case_page">3.8.</a></li>
+					</ul>
+				</li>
+				<li class="nav-item top-level">
+					<a href="#">4. </a>
+					<ul>
+						<li class="nav-item"><a href="#">4.1. </a></li>
+						<li class="nav-item"><a href="#">4.2. </a></li>
+						<li class="nav-item"><a href="#">4.3. </a></li>
+					</ul>
+				</li>
+				<li class="nav-item top-level">
+					<a href="#">5. </a>
+					<ul>
+						<li class="nav-item"><a href="#">5.1. </a></li>
+						<li class="nav-item"><a href="#">5.2. </a></li>
+						<li class="nav-item"><a href="#">5.3. </a></li>
+						<li class="nav-item"><a href="#">5.4. </a></li>
+						<li class="nav-item"><a href="#">5.5. </a></li>
+					</ul>
+				</li>
+				<li class="nav-item top-level">
+					<a href="#">6. </a>
+					<ul>
+						<li class="nav-item"><a href="#">6.1. </a></li>
+						<li class="nav-item"><a href="#">6.2. </a></li>
+						<li class="nav-item"><a href="#">6.3. </a></li>
+					</ul>
+				</li>
+				<li class="nav-item top-level">
+					<a href="#">7. </a>
+					<ul>
+						<li class="nav-item"><a href="#">7.1. </a></li>
+						<li class="nav-item"><a href="#">7.2. </a></li>
+						<li class="nav-item"><a href="#">7.3. </a></li>
+						<li class="nav-item"><a href="#">7.4. </a></li>
+					</ul>
+				</li>
+				<li class="nav-item top-level">
+					<a href="#">8. </a>
+					<ul>
+						<li class="nav-item"><a href="#">8.1. </a></li>
+						<li class="nav-item"><a href="#">8.2. </a></li>
+					</ul>
+				</li>
+				<li class="nav-item top-level">
+					<a href="#">9. </a>
+					<ul>
+						<li class="nav-item"><a href="#">9.1. </a></li>
+					</ul>
+				</li>
+				<li class="nav-item top-level">
+					<a href="#">10. </a>
+					<ul>
+						<li class="nav-item"><a href="#">10.1. </a></li>
+						<li class="nav-item"><a href="#">10.2. </a></li>
+					</ul>
+				</li>
+				<li class="nav-item top-level">
+					<a href="#">11. </a>
+					<ul>
+						<li class="nav-item"><a href="#">11.1. </a></li>
+						<li class="nav-item"><a href="#">11.2. </a></li>
+						<li class="nav-item"><a href="#">11.3. </a></li>
+						<li class="nav-item"><a href="#">11.4. </a></li>
+					</ul>
+				</li>
+				<li class="nav-item top-level">
+					<a href="#">12. </a>
+					<ul>
+						<li class="nav-item"><a href="#">12.1. </a></li>
+						<li class="nav-item"><a href="#">12.2. </a></li>
+					</ul>
+				</li>
+				<li class="nav-item top-level">
+					<a href="#">13. </a>
+					<ul>
+						<li class="nav-item"><a href="#">13.1. </a></li>
+						<li class="nav-item"><a href="#">13.2. </a></li>
+						<li class="nav-item"><a href="#">13.3. </a></li>
+						<li class="nav-item"><a href="#">13.4. </a></li>
+						<li class="nav-item"><a href="#">13.5. </a></li>
+						<li class="nav-item"><a href="#">13.6. </a></li>
+						<li class="nav-item"><a href="#">13.7. </a></li>
+					</ul>
+				</li>
+				<li class="nav-item top-level">
+					<a href="#">14. </a>
+					<ul>
+						<li class="nav-item"><a href="#">14.1. </a></li>
+						<li class="nav-item"><a href="#">14.2. </a></li>
+						<li class="nav-item"><a href="#">14.3. </a></li>
+						<li class="nav-item"><a href="#">14.4. </a></li>
 					</ul>
 				</li>
 			</ul>
