complete allure section#3

--- a/_layouts/allure.html
+++ b/_layouts/allure.html
@@ -41,7 +41,7 @@
 				</li>
 			</ul>
 
-			<ul>
+			<ul style="height: calc(85vh);">
 				<li class="nav-item top-level">
 					<a href="#_about">1. 关于</a>
 					<ul>
@@ -59,16 +59,16 @@
 					</ul>
 				</li>
 				<li class="nav-item top-level">
-					<a href="#_report_structure">3. </a>
+					<a href="#_report_structure">3. 报告结构</a>
 					<ul>
-						<li class="nav-item"><a href="#_overview_page">3.1. </a></li>
-						<li class="nav-item"><a href="#_categories">3.2. </a></li>
-						<li class="nav-item"><a href="#_suites">3.3.</a></li>
-						<li class="nav-item"><a href="#_graphs">3.4.</a></li>
-						<li class="nav-item"><a href="#_timeline">3.5.</a></li>
-						<li class="nav-item"><a href="#_behaviors">3.6.</a></li>
-						<li class="nav-item"><a href="#_packages">3.7.</a></li>
-						<li class="nav-item"><a href="#_test_case_page">3.8.</a></li>
+						<li class="nav-item"><a href="#_overview_page">3.1. 概览</a></li>
+						<li class="nav-item"><a href="#_categories">3.2. 类别</a></li>
+						<li class="nav-item"><a href="#_suites">3.3. 测试集</a></li>
+						<li class="nav-item"><a href="#_graphs">3.4. 图表</a></li>
+						<li class="nav-item"><a href="#_timeline">3.5. 时间轴</a></li>
+						<li class="nav-item"><a href="#_behaviors">3.6. 行为</a></li>
+						<li class="nav-item"><a href="#_packages">3.7. 包</a></li>
+						<li class="nav-item"><a href="#_test_case_page">3.8. 测试用例</a></li>
 					</ul>
 				</li>
 				<li class="nav-item top-level">
