--- a/_layouts/allure.html
+++ b/_layouts/allure.html
@@ -37,7 +37,7 @@
 			<ul>
 				<li class="nav-item top-level {% if page.url == '/' %}current{% endif %}">
 					{% assign home = site.html_pages | where: 'url', '/' | first %}
-					<a href="https://docs.qameta.io/allure/">英文官网</a>
+					<a href="https://docs.qameta.io/allure/">英文手册官网</a>
 				</li>
 			</ul>
 
@@ -67,14 +67,14 @@
 						<li class="nav-item"><a href="#_graphs">3.4. 图表</a></li>
 						<li class="nav-item"><a href="#_timeline">3.5. 时间轴</a></li>
 						<li class="nav-item"><a href="#_behaviors">3.6. 行为</a></li>
-						<li class="nav-item"><a href="#_packages">3.7. 包</a></li>
+						<li class="nav-item"><a href="#_packages">3.7. 软件包</a></li>
 						<li class="nav-item"><a href="#_test_case_page">3.8. 测试用例</a></li>
 					</ul>
 				</li>
 				<li class="nav-item top-level">
 					<a href="#_features">4. 特性</a>
 					<ul>
-						<li class="nav-item"><a href="#_flaky_tests">4.1. Flsky 测试</a></li>
+						<li class="nav-item"><a href="#_flaky_tests">4.1. Flaky 测试</a></li>
 						<li class="nav-item"><a href="#_environment">4.2. 环境</a></li>
 						<li class="nav-item"><a href="#_categories_2">4.3. 分类</a></li>
 					</ul>
@@ -169,7 +169,7 @@
 
 	<section class="main">
 		<div class="page-header">
-			<h3>Allure Framework</h3>
+			<h3>Allure 框架中文手册</h3>
 		</div>
 		<article class="content">
 			{{ content }}
