--- a/_layouts/allure.html
+++ b/_layouts/allure.html
@@ -157,8 +157,8 @@
 				<li class="nav-item top-level">
 					<a href="#_allure_plugins_system">14. Allure 插件系统</a>
 					<ul>
-						<li class="nav-item"><a href="#_java_plugin_api_overview">14.1. Java 插件 API 概览</a></li>
-						<li class="nav-item"><a href="#_js_plugin_api_overview">14.2. JS 插件 API 概览</a></li>
+						<li class="nav-item"><a href="#_java_plugin_api_overview">14.1. Java 插件 API</a></li>
+						<li class="nav-item"><a href="#_js_plugin_api_overview">14.2. JS 插件 API</a></li>
 						<li class="nav-item"><a href="#_writing_a_skeleton_code_for_a_new_plugin">14.3. 写一个新插件</a></li>
 						<li class="nav-item"><a href="#_existing_plugins">14.4. 已有的插件</a></li>
 					</ul>
