--- a/_layouts/allure.html
+++ b/_layouts/allure.html
@@ -26,7 +26,7 @@
 	{% endif %}
 </head>
 
-<body>
+<body style="font-family: 'Microsoft YaHei', 'PingFangSC-Regular', 'sans-serif';">
 	<header style="position: fixed;">
 		<h1>
 			<a href="{{ site.baseurl }}/allure"><img src="{{ site.baseurl }}/images/allure.png" width="40" height="40"
@@ -43,124 +43,124 @@
 
 			<ul style="height: calc(85vh);">
 				<li class="nav-item top-level">
-					<a href="#_about">1. 关于</a>
+					<a href="#1-关于">1. 关于</a>
 					<ul>
-						<li class="nav-item"><a href="#_copyright">1.1. 版权</a></li>
-						<li class="nav-item"><a href="#_get_help">1.2. 获得帮助</a></li>
-						<li class="nav-item"><a href="#_how_to_proceed">1.3. 如何开始</a></li>
+						<li class="nav-item"><a href="#11-版权">1.1. 版权</a></li>
+						<li class="nav-item"><a href="#12-获得帮助">1.2. 获得帮助</a></li>
+						<li class="nav-item"><a href="#13-如何开始">1.3. 如何开始</a></li>
 					</ul>
 				</li>
 				<li class="nav-item top-level">
-					<a href="#_get_started">2. 开始</a>
+					<a href="#2-开始">2. 开始</a>
 					<ul>
-						<li class="nav-item"><a href="#_installing_a_commandline">2.1. 安装</a></li>
-						<li class="nav-item"><a href="#_test_execution">2.2. 执行测试</a></li>
-						<li class="nav-item"><a href="#_report_generation">2.3. 生成报告</a></li>
+						<li class="nav-item"><a href="#21-安装">2.1. 安装</a></li>
+						<li class="nav-item"><a href="#22-执行测试">2.2. 执行测试</a></li>
+						<li class="nav-item"><a href="#23-生成报告">2.3. 生成报告</a></li>
 					</ul>
 				</li>
 				<li class="nav-item top-level">
-					<a href="#_report_structure">3. 报告结构</a>
+					<a href="#3-报告结构">3. 报告结构</a>
 					<ul>
-						<li class="nav-item"><a href="#_overview_page">3.1. 概览</a></li>
-						<li class="nav-item"><a href="#_categories">3.2. 类别</a></li>
-						<li class="nav-item"><a href="#_suites">3.3. 测试集</a></li>
-						<li class="nav-item"><a href="#_graphs">3.4. 图表</a></li>
-						<li class="nav-item"><a href="#_timeline">3.5. 时间轴</a></li>
-						<li class="nav-item"><a href="#_behaviors">3.6. 行为</a></li>
-						<li class="nav-item"><a href="#_packages">3.7. 软件包</a></li>
-						<li class="nav-item"><a href="#_test_case_page">3.8. 测试用例</a></li>
+						<li class="nav-item"><a href="#31-概览">3.1. 概览</a></li>
+						<li class="nav-item"><a href="#32-类别">3.2. 类别</a></li>
+						<li class="nav-item"><a href="#33-测试集">3.3. 测试集</a></li>
+						<li class="nav-item"><a href="#34-图表">3.4. 图表</a></li>
+						<li class="nav-item"><a href="#35-时间轴">3.5. 时间轴</a></li>
+						<li class="nav-item"><a href="#36-行为">3.6. 行为</a></li>
+						<li class="nav-item"><a href="#37-软件包">3.7. 软件包</a></li>
+						<li class="nav-item"><a href="#38-测试用例">3.8. 测试用例</a></li>
 					</ul>
 				</li>
 				<li class="nav-item top-level">
-					<a href="#_features">4. 特性</a>
+					<a href="#4-特性">4. 特性</a>
 					<ul>
-						<li class="nav-item"><a href="#_flaky_tests">4.1. Flaky 测试</a></li>
-						<li class="nav-item"><a href="#_environment">4.2. 环境</a></li>
-						<li class="nav-item"><a href="#_categories_2">4.3. 分类</a></li>
+						<li class="nav-item"><a href="#41-Flaky-测试">4.1. Flaky 测试</a></li>
+						<li class="nav-item"><a href="#42-环境">4.2. 环境</a></li>
+						<li class="nav-item"><a href="#43-分类">4.3. 分类</a></li>
 					</ul>
 				</li>
 				<li class="nav-item top-level">
-					<a href="#_java">5. Java</a>
+					<a href="#5-java">5. Java</a>
 					<ul>
-						<li class="nav-item"><a href="#_junit_4">5.1. jUnit 4</a></li>
-						<li class="nav-item"><a href="#_junit_5">5.2. jUnit 5</a></li>
-						<li class="nav-item"><a href="#_testng">5.3. TestNG</a></li>
-						<li class="nav-item"><a href="#_cucumber_jvm">5.4. Cucumber JVM</a></li>
-						<li class="nav-item"><a href="#_selenide">5.5. Selenide</a></li>
+						<li class="nav-item"><a href="#51-junit-4">5.1. jUnit 4</a></li>
+						<li class="nav-item"><a href="#52-junit-5">5.2. jUnit 5</a></li>
+						<li class="nav-item"><a href="#53-testng">5.3. TestNG</a></li>
+						<li class="nav-item"><a href="#54-cucumber-jvm">5.4. Cucumber JVM</a></li>
+						<li class="nav-item"><a href="#55-selenide">5.5. Selenide</a></li>
 					</ul>
 				</li>
 				<li class="nav-item top-level">
-					<a href="#_python">6. Python</a>
+					<a href="#6-python">6. Python</a>
 					<ul>
-						<li class="nav-item"><a href="#_pytest">6.1. Pytest</a></li>
-						<li class="nav-item"><a href="#_behave">6.2. Behave</a></li>
-						<li class="nav-item"><a href="#_nose">6.3. Nose</a></li>
+						<li class="nav-item"><a href="#61-pytest">6.1. Pytest</a></li>
+						<li class="nav-item"><a href="#62-behave">6.2. Behave</a></li>
+						<li class="nav-item"><a href="#63-nose">6.3. Nose</a></li>
 					</ul>
 				</li>
 				<li class="nav-item top-level">
-					<a href="#_javascript">7. JavaScript</a>
+					<a href="#7-javascript">7. JavaScript</a>
 					<ul>
-						<li class="nav-item"><a href="#_jasmine">7.1. Jasmine</a></li>
-						<li class="nav-item"><a href="#_cucumber_js">7.2. Cucumber JS</a></li>
-						<li class="nav-item"><a href="#_karma">7.3. Karma</a></li>
-						<li class="nav-item"><a href="#_mocha">7.4. Mocha</a></li>
+						<li class="nav-item"><a href="#71-jasmine">7.1. Jasmine</a></li>
+						<li class="nav-item"><a href="#72-cucumber-js">7.2. Cucumber JS</a></li>
+						<li class="nav-item"><a href="#73-karma">7.3. Karma</a></li>
+						<li class="nav-item"><a href="#74-mocha">7.4. Mocha</a></li>
 					</ul>
 				</li>
 				<li class="nav-item top-level">
-					<a href="#_ruby">8. Ruby</a>
+					<a href="#8-ruby">8. Ruby</a>
 					<ul>
-						<li class="nav-item"><a href="#_cucumber">8.1. Cucumber</a></li>
-						<li class="nav-item"><a href="#_rspec">8.2. RSpec</a></li>
+						<li class="nav-item"><a href="#81-cucumber">8.1. Cucumber</a></li>
+						<li class="nav-item"><a href="#82-rspec">8.2. RSpec</a></li>
 					</ul>
 				</li>
 				<li class="nav-item top-level">
-					<a href="#_groovy">9. Groovy</a>
+					<a href="#9-groovy">9. Groovy</a>
 					<ul>
-						<li class="nav-item"><a href="#_spock">9.1. Spock</a></li>
+						<li class="nav-item"><a href="#91-spock">9.1. Spock</a></li>
 					</ul>
 				</li>
 				<li class="nav-item top-level">
-					<a href="#_php">10. PHP</a>
+					<a href="#10-php">10. PHP</a>
 					<ul>
-						<li class="nav-item"><a href="#_phpunit">10.1. PHPUnit</a></li>
-						<li class="nav-item"><a href="#_allurecodeception">10.2. ALLURECodeception</a></li>
+						<li class="nav-item"><a href="#101-phpunit">10.1. PHPUnit</a></li>
+						<li class="nav-item"><a href="#102-allurecodeception">10.2. ALLURECodeception</a></li>
 					</ul>
 				</li>
 				<li class="nav-item top-level">
-					<a href="#__net">11. .NET</a>
+					<a href="#11-net">11. .NET</a>
 					<ul>
-						<li class="nav-item"><a href="#_specflow">11.1. SpecFlow</a></li>
-						<li class="nav-item"><a href="#_nunit_3">11.2. NUnit 3</a></li>
-						<li class="nav-item"><a href="#_nunit_2">11.3. NUnit 2</a></li>
-						<li class="nav-item"><a href="#_mstest">11.4. MSTest</a></li>
+						<li class="nav-item"><a href="#111-specflow">11.1. SpecFlow</a></li>
+						<li class="nav-item"><a href="#112-nunit-3">11.2. NUnit 3</a></li>
+						<li class="nav-item"><a href="#113-nunit-2">11.3. NUnit 2</a></li>
+						<li class="nav-item"><a href="#114-mstest">11.4. MSTest</a></li>
 					</ul>
 				</li>
 				<li class="nav-item top-level">
-					<a href="#_scala">12. Scala</a>
+					<a href="#12-scala">12. Scala</a>
 					<ul>
-						<li class="nav-item"><a href="#_scalatest">12.1. ScalaTest</a></li>
-						<li class="nav-item"><a href="#_specs">12.2. Specs</a></li>
+						<li class="nav-item"><a href="#121-scalatest">12.1. ScalaTest</a></li>
+						<li class="nav-item"><a href="#122-specs">12.2. Specs</a></li>
 					</ul>
 				</li>
 				<li class="nav-item top-level">
-					<a href="#_reporting">13. 报告</a>
+					<a href="#13-报告">13. 报告</a>
 					<ul>
-						<li class="nav-item"><a href="#_commandline">13.1. 命令行</a></li>
-						<li class="nav-item"><a href="#_jenkins">13.2. Jenkins</a></li>
-						<li class="nav-item"><a href="#_teamcity">13.3. TeamCity</a></li>
-						<li class="nav-item"><a href="#_bamboo">13.4. Bamboo</a></li>
-						<li class="nav-item"><a href="#_codefresh">13.5. Codefresh</a></li>
-						<li class="nav-item"><a href="#_gradle_5">13.6. Gradle</a></li>
-						<li class="nav-item"><a href="#_maven_6">13.7. Maven</a></li>
+						<li class="nav-item"><a href="#131-命令行">13.1. 命令行</a></li>
+						<li class="nav-item"><a href="#132-jenkins">13.2. Jenkins</a></li>
+						<li class="nav-item"><a href="#133-teamcity">13.3. TeamCity</a></li>
+						<li class="nav-item"><a href="#134-bamboo">13.4. Bamboo</a></li>
+						<li class="nav-item"><a href="#135-codefresh">13.5. Codefresh</a></li>
+						<li class="nav-item"><a href="#136-gradle">13.6. Gradle</a></li>
+						<li class="nav-item"><a href="#137-maven">13.7. Maven</a></li>
 					</ul>
 				</li>
 				<li class="nav-item top-level">
-					<a href="#_allure_plugins_system">14. Allure 插件系统</a>
+					<a href="#14-allure-插件系统">14. Allure 插件系统</a>
 					<ul>
-						<li class="nav-item"><a href="#_java_plugin_api_overview">14.1. Java 插件 API</a></li>
-						<li class="nav-item"><a href="#_js_plugin_api_overview">14.2. JS 插件 API</a></li>
-						<li class="nav-item"><a href="#_writing_a_skeleton_code_for_a_new_plugin">14.3. 写一个新插件</a></li>
-						<li class="nav-item"><a href="#_existing_plugins">14.4. 已有的插件</a></li>
+						<li class="nav-item"><a href="#141-java-插件-api">14.1. Java 插件 API</a></li>
+						<li class="nav-item"><a href="#142-js-插件-api">14.2. JS 插件 API</a></li>
+						<li class="nav-item"><a href="#143-写一个新插件">14.3. 写一个新插件</a></li>
+						<li class="nav-item"><a href="#144-已有的插件">14.4. 已有的插件</a></li>
 					</ul>
 				</li>
 			</ul>
