comlete allure CHN doc

--- a/_layouts/allure.html
+++ b/_layouts/allure.html
@@ -37,7 +37,7 @@
 			<ul>
 				<li class="nav-item top-level {% if page.url == '/' %}current{% endif %}">
 					{% assign home = site.html_pages | where: 'url', '/' | first %}
-					<a href="https://docs.qameta.io/allure/">英文手册官网</a>
+					<a href="https://docs.qameta.io/allure/" target="_blank">英文手册官网</a>
 				</li>
 			</ul>
 
