--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
 	{% endif %}
 </head>
 
-<body>
+<body style="font-family: 'Microsoft YaHei', 'PingFangSC-Regular', 'sans-serif';">
 	<header style="position: fixed;">
 		<h1>
 			<a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/emblem.svg" width="40" height="40"
