--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,11 +55,12 @@
 				{% if group.name != '扩展' %}
 				<li class="nav-item top-level {% if group.name == page.category %}current{% endif %}">
 					{% assign items = group.items | sort: 'order' %}
-					<a href="{{ site.baseurl }}{{ items.first.url }}">{{ group.name }}</a>
+					<a>{{ group.name }}</a>
 					<ul>
 						{% for item in items %}
-						<li class="nav-item {% if item.url == page.url %}current{% endif %}"><a
-								href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a></li>
+						<li class="nav-item {% if item.url == page.url %}current{% endif %}">
+							<a href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a>
+						</li>
 						{% endfor %}
 					</ul>
 				</li>
@@ -72,11 +73,14 @@
 				{% if group.name == '扩展' %}
 				<li class="nav-item top-level {% if group.name == page.category %}current{% endif %}">
 					{% assign items = group.items | sort: 'order' %}
-					<a href="{{ site.baseurl }}{{ items.first.url }}">{{ group.name }}</a>
+					<a>{{ group.name }}</a>
 					<ul>
 						{% for item in items %}
-						<li class="nav-item {% if item.url == page.url %}current{% endif %}"><a
-								href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a></li>
+						{% if item.title != 'Nirvana' %}
+						<li class="nav-item {% if item.url == page.url %}current{% endif %}">
+							<a href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a>
+						</li>
+						{% endif %}
 						{% endfor %}
 					</ul>
 				</li>
