--- a/css/appointment/theme-menu.css
+++ b/css/appointment/theme-menu.css
@@ -90,12 +90,12 @@
 .navbar .navbar-nav > .open > a:hover,
 .navbar .navbar-nav > .open > a:focus {
 	background-color: #fff;
-	color: #003980;
+	color: #f4ae6c;
 }
 .navbar .navbar-nav > li > a:hover,
 .navbar .navbar-nav > li > a:focus {
 	background-color: #fff;
-	color: #003980;
+	color: #f4ae6c;
 }
 .navbar .navbar-nav > li {
     margin-right: 0px;
@@ -146,7 +146,7 @@
 }
 .dropdown-menu > li > a:hover,
 .dropdown-menu > li > a:focus {
-    color: #003980;
+    color: #f4ae6c;
     text-decoration: none;
 }
 .dropdown-submenu { position:relative; }
